Revert "migrations: archive old migrations before v1.9.1"
I accidentially bumped some dependency crate versions when I was
resolving conflicts in Cargo.lock which causes a failure in license
scan.

--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -25,7 +25,50 @@ members = [
     "api/prairiedog",
 
     # "api/migration/migrations/vX.Y.Z/..."
-    # (all migrations currently archived; replace this line with new ones)
+    "api/migration/migrations/v1.3.0/etc-hosts-service",
+    "api/migration/migrations/v1.3.0/hostname-affects-etc-hosts",
+    "api/migration/migrations/v1.3.0/control-container-v0-5-2",
+    "api/migration/migrations/v1.4.0/registry-mirror-representation",
+    "api/migration/migrations/v1.4.2/admin-container-v0-7-3",
+    "api/migration/migrations/v1.4.2/control-container-v0-5-3",
+    "api/migration/migrations/v1.5.0/oci-hooks-setting",
+    "api/migration/migrations/v1.5.0/oci-hooks-setting-metadata",
+    "api/migration/migrations/v1.5.1/control-container-v0-5-4",
+    "api/migration/migrations/v1.5.3/vmware-host-containers",
+    "api/migration/migrations/v1.6.0/node-taints-representation",
+    "api/migration/migrations/v1.6.0/aws-admin-container-v0-7-4",
+    "api/migration/migrations/v1.6.0/aws-control-container-v0-5-5",
+    "api/migration/migrations/v1.6.0/public-admin-container-v0-7-4",
+    "api/migration/migrations/v1.6.0/public-control-container-v0-5-5",
+    "api/migration/migrations/v1.6.2/add-cfsignal",
+    "api/migration/migrations/v1.6.2/container-registry-credentials",
+    "api/migration/migrations/v1.6.2/container-registry-credentials-metadata",
+    "api/migration/migrations/v1.7.0/aws-admin-container-v0-8-0",
+    "api/migration/migrations/v1.7.0/aws-control-container-v0-6-0",
+    "api/migration/migrations/v1.7.0/public-admin-container-v0-8-0",
+    "api/migration/migrations/v1.7.0/public-control-container-v0-6-0",
+    "api/migration/migrations/v1.8.0/boot-setting",
+    "api/migration/migrations/v1.8.0/boot-setting-metadata",
+    "api/migration/migrations/v1.8.0/kubelet-pod-pids-limit",
+    "api/migration/migrations/v1.8.0/add-pull-behavior",
+    "api/migration/migrations/v1.8.0/add-autoscaling",
+    "api/migration/migrations/v1.8.0/etc-hosts",
+    "api/migration/migrations/v1.8.0/etc-hosts-metadata",
+    "api/migration/migrations/v1.8.0/cluster-dns-ip-list",
+    "api/migration/migrations/v1.8.0/pki-affected-services",
+    "api/migration/migrations/v1.8.0/kubelet-provider-id",
+    "api/migration/migrations/v1.8.0/aws-admin-container-v0-9-0",
+    "api/migration/migrations/v1.8.0/aws-control-container-v0-6-1",
+    "api/migration/migrations/v1.8.0/public-admin-container-v0-9-0",
+    "api/migration/migrations/v1.8.0/public-control-container-v0-6-1",
+    "api/migration/migrations/v1.9.0/ntp-affected-services",
+    "api/migration/migrations/v1.9.0/shibaken-admin-userdata-semantics",
+    "api/migration/migrations/v1.9.0/shibaken-send-metrics",
+    "api/migration/migrations/v1.9.0/image-gc-thresholds",
+    "api/migration/migrations/v1.9.0/kernel-modules-setting",
+    "api/migration/migrations/v1.9.0/kernel-modules-setting-metadata",
+    "api/migration/migrations/v1.9.0/kubelet-no-daemon-reload",
+    "api/migration/migrations/v1.9.0/updates-targets-base-url",
 
     "bottlerocket-release",
 
