migrations: add boot.reboot-to-reconcile setting
A previous commit introduced the new "settings.boot.reboot-to-reconcile"
setting to the BootSettings model. Add a migration to allow rolling back
to a version of Bottlerocket without the new setting on a host that has
it set.

Signed-off-by: Markus Boehme <markubo@amazon.com>

--- a/Release.toml
+++ b/Release.toml
@@ -145,4 +145,5 @@ version = "1.10.0"
 "(1.9.2, 1.10.0)" = [
     "migrate_v1.10.0_dns-settings.lz4",
     "migrate_v1.10.0_dns-settings-metadata.lz4",
+    "migrate_v1.10.0_reboot-to-reconcile-setting.lz4",
 ]
