kubelet: add image credential provider settings
Add kubelet config option `credential-providers` to allow configuring
image credential provider settings.

Mention of the new settings have been added to the README, but more
detailed documentation on how to use the feature will be necessary.
Those docs will be added in a future commit.

Signed-off-by: Sean McGinnis <stmcg@amazon.com>

--- a/Release.toml
+++ b/Release.toml
@@ -160,4 +160,5 @@ version = "1.10.1"
     "migrate_v1.11.0_aws-config-settings.lz4",
     "migrate_v1.11.0_aws-creds.lz4",
     "migrate_v1.11.0_aws-creds-metadata.lz4",
+    "migrate_v1.11.0_credential-providers.lz4",
 ]
