--- a/packages/kubernetes-1.21/Cargo.toml
+++ b/packages/kubernetes-1.21/Cargo.toml
@@ -24,6 +24,7 @@ glibc = { path = "../glibc" }
 
 # RPM Requires
 [dependencies]
+ecr-credential-provider = { path = "../ecr-credential-provider" }
 # `conntrack-tools`, `containerd` and `findutils` are only needed at runtime,
 # and are pulled in by `release`.
 # conntrack-tools = { path = "../conntrack-tools" }
