--- a/variants/Cargo.toml
+++ b/variants/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "metal-k8s-1.21",
     "metal-k8s-1.22",
     "metal-k8s-1.23",
+    "metal-k8s-1.24",
     "vmware-dev",
     "vmware-k8s-1.20",
     "vmware-k8s-1.21",
