sources: clarify crossbeam license
The BSD-2-Clause license is not listed upstream since this change:
  https://github.com/crossbeam-rs/crossbeam/pull/537

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/sources/clarify.toml
+++ b/sources/clarify.toml
@@ -38,7 +38,7 @@ license-files = [
 ]
 
 [clarify.crossbeam-queue]
-expression = "(MIT OR Apache-2.0) AND BSD-2-Clause-FreeBSD"
+expression = "MIT OR Apache-2.0"
 license-files = [
     { path = "LICENSE-APACHE", hash = 0x24b54f4b },
     { path = "LICENSE-MIT", hash = 0x386ca1bc },
@@ -46,7 +46,7 @@ license-files = [
 ]
 
 [clarify.crossbeam-channel]
-expression = "(MIT OR Apache-2.0) AND BSD-2-Clause-FreeBSD"
+expression = "MIT OR Apache-2.0"
 license-files = [
     { path = "LICENSE-APACHE", hash = 0x24b54f4b },
     { path = "LICENSE-MIT", hash = 0xbc436f08 },
