kubelet: Add setting to change log level
This adds a new `kubernetes.log-level` setting to allow
configuration of the kubelet logging verbosity. With this, an end user
can turn up verbosity if they are trying to troubleshoot something, or
turn down verbosity if they don't need as many log messages.

Signed-off-by: Sean McGinnis <stmcg@amazon.com>

--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -28,6 +28,7 @@ members = [
     "api/migration/migrations/v1.10.0/dns-settings",
     "api/migration/migrations/v1.10.0/dns-settings-metadata",
     "api/migration/migrations/v1.10.0/reboot-to-reconcile-setting",
+    "api/migration/migrations/v1.10.0/kubelet-log-level",
 
     "bottlerocket-release",
 
