packages: update libnvidia-container
libnvidia-container added support to configure cgroups through a go
library, which is currently "experimental". In order to use the stable
behavior, this package has to be compiled with `WITH_NVCGO=n`.

This also updates the upstream URL to use a more specific file name
instead of only the version of the package used.

Signed-off-by: Arnaldo Garcia Rincon <agarrcia@amazon.com>

--- a/packages/libnvidia-container/Cargo.toml
+++ b/packages/libnvidia-container/Cargo.toml
@@ -12,8 +12,8 @@ path = "pkg.rs"
 releases-url = "https://github.com/NVIDIA/libnvidia-container/releases"
 
 [[package.metadata.build-package.external-files]]
-url = "https://github.com/NVIDIA/libnvidia-container/archive/v1.7.0.tar.gz"
-sha512 = "cb2bedc7f3278c56f9da003257ea1c16116ac52cc4a792e4bdfc7e1739a5504436b61db65abb159f4bd4702d961ebd4c455605ce5e9daac00a2ab282a1b1348f"
+url = "https://github.com/NVIDIA/libnvidia-container/archive/v1.11.0/libnvidia-container-1.11.0.tar.gz"
+sha512 = "d74b84950c4139b6e81be5e644fab38b2e78b69a6275e693c15936825226484e1504f8ed683d7001e521d5f1e7bf6b660781a2cd929490ca8e9e57bade2d6134"
 [[package.metadata.build-package.external-files]]
 url = "https://github.com/NVIDIA/nvidia-modprobe/archive/495.44/nvidia-modprobe-495.44.tar.gz"
 sha512 = "67486ed1b17c8962786e13880910bb2b1938206a0fd76b360ddef7faf80ee0c941a2e3fbc73fa92a92009e2c54130dce17a466c8079537a981a2fed09c07e4c9"
