--- a/Release.toml
+++ b/Release.toml
@@ -147,4 +147,6 @@ version = "1.10.0"
     "migrate_v1.10.0_dns-settings-metadata.lz4",
     "migrate_v1.10.0_reboot-to-reconcile-setting.lz4",
     "migrate_v1.10.0_kubelet-log-level.lz4",
+    "migrate_v1.10.0_aws-admin-container-v0-9-2.lz4",
+    "migrate_v1.10.0_public-admin-container-v0-9-2.lz4",
 ]
