--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -29,6 +29,8 @@ members = [
     "api/migration/migrations/v1.10.0/dns-settings-metadata",
     "api/migration/migrations/v1.10.0/reboot-to-reconcile-setting",
     "api/migration/migrations/v1.10.0/kubelet-log-level",
+    "api/migration/migrations/v1.10.0/aws-admin-container-v0-9-2",
+    "api/migration/migrations/v1.10.0/public-admin-container-v0-9-2",
 
     "bottlerocket-release",
 
