specify mode for tmpfs mounts
In practice, the mode didn't really matter because the SELinux label
would enforce the expected permissions, but the "wide open" default
mode for tmpfs mounts could trigger an alert from scanning tools.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/host-ctr/etc-host-containers.mount.in
+++ b/packages/host-ctr/etc-host-containers.mount.in
@@ -10,7 +10,7 @@ Wants=selinux-policy-files.service
 What=tmpfs
 Where=/etc/host-containers
 Type=tmpfs
-Options=nosuid,nodev,noexec,noatime,context=system_u:object_r:secret_t:s0
+Options=nosuid,nodev,noexec,noatime,mode=0750,context=system_u:object_r:secret_t:s0
 
 [Install]
 WantedBy=preconfigured.target
