--- a/Release.toml
+++ b/Release.toml
@@ -149,4 +149,6 @@ version = "1.10.0"
     "migrate_v1.10.0_kubelet-log-level.lz4",
     "migrate_v1.10.0_aws-admin-container-v0-9-2.lz4",
     "migrate_v1.10.0_public-admin-container-v0-9-2.lz4",
+    "migrate_v1.10.0_aws-control-container-v0-6-3.lz4",
+    "migrate_v1.10.0_public-control-container-v0-6-3.lz4"
 ]
