--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -31,6 +31,8 @@ members = [
     "api/migration/migrations/v1.10.0/kubelet-log-level",
     "api/migration/migrations/v1.10.0/aws-admin-container-v0-9-2",
     "api/migration/migrations/v1.10.0/public-admin-container-v0-9-2",
+    "api/migration/migrations/v1.10.0/aws-control-container-v0-6-3",
+     "api/migration/migrations/v1.10.0/public-control-container-v0-6-3",
 
     "bottlerocket-release",
 
