--- a/variants/Cargo.toml
+++ b/variants/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "aws-k8s-1.22-nvidia",
     "aws-k8s-1.23",
     "aws-k8s-1.23-nvidia",
+    "aws-k8s-1.24",
     "metal-dev",
     "metal-k8s-1.21",
     "metal-k8s-1.22",
