packages: Add AWS config
Adds configuration settings for controlling AWS credentials and
configuration. This enables setting the `~/.aws/config` and
`~/.aws/credentials` file contents so anything using an aws client can
be configured to use something other than the default instance role.

This adds the AwsSettings to the non-AWS k8s variants in preparation of
their use for configuring credential providers.

Signed-off-by: Sean McGinnis <stmcg@amazon.com>

--- a/Release.toml
+++ b/Release.toml
@@ -156,3 +156,8 @@ version = "1.10.1"
     "migrate_v1.10.1_container-runtime.lz4",
     "migrate_v1.10.1_container-runtime-metadata.lz4"
 ]
+"(1.10.1, 1.11.0)" = [
+    "migrate_v1.11.0_aws-config-settings.lz4",
+    "migrate_v1.11.0_aws-creds.lz4",
+    "migrate_v1.11.0_aws-creds-metadata.lz4",
+]
