--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -32,7 +32,9 @@ members = [
     "api/migration/migrations/v1.10.0/aws-admin-container-v0-9-2",
     "api/migration/migrations/v1.10.0/public-admin-container-v0-9-2",
     "api/migration/migrations/v1.10.0/aws-control-container-v0-6-3",
-     "api/migration/migrations/v1.10.0/public-control-container-v0-6-3",
+    "api/migration/migrations/v1.10.0/public-control-container-v0-6-3",
+    "api/migration/migrations/v1.10.1/container-runtime",
+    "api/migration/migrations/v1.10.1/container-runtime-metadata",
 
     "bottlerocket-release",
 
