--- a/variants/vmware-dev/Cargo.toml
+++ b/variants/vmware-dev/Cargo.toml
@@ -18,6 +18,9 @@ kernel-parameters = [
     "netdog.default-interface=eth0:dhcp4,dhcp6?",
     "quiet",
 ]
+grub-features = [
+    "set-private-var"
+]
 included-packages = [
 # core
     "release",
