Update Release.toml for v1.10.1

--- a/Release.toml
+++ b/Release.toml
@@ -1,4 +1,4 @@
-version = "1.10.0"
+version = "1.10.1"
 
 [migrations]
 "(0.3.1, 0.3.2)" = ["migrate_v0.3.2_admin-container-v0-5-0.lz4"]
@@ -151,4 +151,8 @@ version = "1.10.0"
     "migrate_v1.10.0_public-admin-container-v0-9-2.lz4",
     "migrate_v1.10.0_aws-control-container-v0-6-3.lz4",
     "migrate_v1.10.0_public-control-container-v0-6-3.lz4"
+]
+"(1.10.0, 1.10.1)" = [
+    "migrate_v1.10.1_container-runtime.lz4",
+    "migrate_v1.10.1_container-runtime-metadata.lz4"
 ]
