--- a/variants/aws-dev/Cargo.toml
+++ b/variants/aws-dev/Cargo.toml
@@ -7,6 +7,9 @@ build = "build.rs"
 # Don't rebuild crate just because of changes to README.
 exclude = ["README.md"]
 
+[package.metadata.build-variant.image-features]
+grub-set-private-var = true
+
 [package.metadata.build-variant]
 kernel-parameters = [
     "console=tty0",
@@ -16,9 +19,6 @@ kernel-parameters = [
     "net.ifnames=0",
     "netdog.default-interface=eth0:dhcp4,dhcp6?",
     "quiet",
-]
-grub-features = [
-    "set-private-var"
 ]
 included-packages = [
 # core
