--- a/variants/aws-k8s-1.23-nvidia/Cargo.toml
+++ b/variants/aws-k8s-1.23-nvidia/Cargo.toml
@@ -12,6 +12,9 @@ exclude = ["README.md"]
 [package.metadata.build-variant.image-layout]
 os-image-size-gib = 4
 
+[package.metadata.build-variant.image-features]
+grub-set-private-var = true
+
 [package.metadata.build-variant]
 included-packages = [
     "aws-iam-authenticator",
@@ -23,9 +26,6 @@ included-packages = [
     "nvidia-container-toolkit",
     "nvidia-k8s-device-plugin",
     "kmod-5.10-nvidia-tesla-470",
-]
-grub-features = [
-    "set-private-var"
 ]
 kernel-parameters = [
     "console=tty0",
