--- a/variants/aws-k8s-1.23/Cargo.toml
+++ b/variants/aws-k8s-1.23/Cargo.toml
@@ -9,6 +9,9 @@ build = "build.rs"
 # Don't rebuild crate just because of changes to README.
 exclude = ["README.md"]
 
+[package.metadata.build-variant.image-features]
+grub-set-private-var = true
+
 [package.metadata.build-variant]
 included-packages = [
     "aws-iam-authenticator",
@@ -17,9 +20,6 @@ included-packages = [
     "kernel-5.10",
     "kubelet-1.23",
     "release",
-]
-grub-features = [
-    "set-private-var"
 ]
 kernel-parameters = [
     "console=tty0",
