--- a/variants/metal-dev/Cargo.toml
+++ b/variants/metal-dev/Cargo.toml
@@ -10,16 +10,15 @@ exclude = ["README.md"]
 [package.metadata.build-variant.image-layout]
 partition-plan = "unified"
 
+[package.metadata.build-variant.image-features]
+grub-set-private-var = true
+
 [package.metadata.build-variant]
 image-format = "raw"
 kernel-parameters = [
     # Only reserve if there are at least 2GB
     "crashkernel=2G-:256M"
 ]
-grub-features = [
-    "set-private-var"
-]
-
 included-packages = [
 # core
     "release",
