--- a/variants/vmware-dev/Cargo.toml
+++ b/variants/vmware-dev/Cargo.toml
@@ -10,6 +10,9 @@ exclude = ["README.md"]
 [package.metadata.build-variant.image-layout]
 partition-plan = "unified"
 
+[package.metadata.build-variant.image-features]
+grub-set-private-var = true
+
 [package.metadata.build-variant]
 image-format = "vmdk"
 supported-arches = ["x86_64"]
@@ -20,9 +23,6 @@ kernel-parameters = [
     "net.ifnames=0",
     "netdog.default-interface=eth0:dhcp4,dhcp6?",
     "quiet",
-]
-grub-features = [
-    "set-private-var"
 ]
 included-packages = [
 # core
