feature: Enable configuration of Kubelet TLS certs
This enables the ability to provide a TLS public and private key to be
used by the kubelet process for HTTPS communication.

This corresponds to the `--tls-cert-file` and `--tls-key-file`
arguments (or the `tlsCertFile` and `tlsPrivateKeyFile` config
settings).

Signed-off-by: Sean McGinnis <stmcg@amazon.com>

--- a/Release.toml
+++ b/Release.toml
@@ -161,4 +161,6 @@ version = "1.10.1"
     "migrate_v1.11.0_aws-creds.lz4",
     "migrate_v1.11.0_aws-creds-metadata.lz4",
     "migrate_v1.11.0_credential-providers.lz4",
+    "migrate_v1.11.0_kubelet-tls-config.lz4",
+    "migrate_v1.11.0_kubelet-new-config-files.lz4",
 ]
