logdog: add systemd analyze commands to common.conf
This adds 'systemd-analyze blame' and 'systemd-analyze critical-chain'
for our systemd target units to 'logdog.common.conf'. This information
is useful for boot time analysis.

--- a/sources/logdog/conf/logdog.common.conf
+++ b/sources/logdog/conf/logdog.common.conf
@@ -8,6 +8,8 @@ exec iptables-nat iptables -nvL -t nat
 exec journalctl-boots journalctl --list-boots --no-pager
 exec journalctl.errors journalctl -p err -a --no-pager
 exec journalctl.log journalctl -a --no-pager
+exec systemd-analyze-blame systemd-analyze blame --no-pager
+exec systemd-analyze-critical-chain systemd-analyze critical-chain --no-pager preconfigured.target configured.target multi-user.target
 # file copy does not work for this, use cat command instead
 exec proc-mounts cat /proc/mounts
 exec signpost signpost status
